2021-07-15  David Turner  <david@freetype.org>

	[smooth] Minor speedup to smooth rasterizer

	This speeds up the smooth rasterizer by avoiding a conditional
	branches in the hot path.

	* src/smooth/ftgrays.c: Define a null cell used to both as a
	sentinel for all linked-lists, and to accumulate coverage and
	area values for "out-of-bounds" cell positions without a
	conditional check.

2021-07-15  David Turner  <david@freetype.org>

	Replaces download-test-fonts.sh with download-test-fonts.py which
	does the same work, and also avoids downloading anything if the
	files are already installed with the right content.

	Now uses the first 8 byte of each file's sha256 hash for the digest.

	* tests/scripts/download-test-fonts.sh: Removed
	* tests/scripts/download-test-fonts.py: New script
	* tests/README.md: Updated

2021-07-15  Alex Richardson  <Alexander.Richardson@cl.cam.ac.uk>

	Support architectures where `long` is smaller than pointers.

	I am currently trying to compile FreeType for CHERI-extended ISAs
	(CHERI-RISC-V and Arm's Morello), but I am getting compiler warnings
	from the `FT_UINT_TO_POINTER` macro.  When compiling with the CHERI
	Clang compiler, not using `uinptr_t` for casts between integers an
	pointers results in the following `-Werror` build failures:

	```
	In file included from .../src/truetype/truetype.c:22:
	  .../src/truetype/ttgload.c:1925:22: error:
	    cast from provenance-free integer type to pointer type will
	    give pointer that can not be dereferenced
	    [-Werror,-Wcheri-capability-misuse]
	  node->data = FT_UINT_TO_POINTER( glyph_index );
	               ^
	  .../include/freetype/internal/compiler-macros.h:79:34: note:
	    expanded from macro 'FT_UINT_TO_POINTER'
	```

	* include/freetype/internal/compiler-macros.h (FT_UINT_TO_POINTER):
	The ISO C standard compliant fix for this would be to use
	`uintptr_t` from `stdint.h`, but I am not sure if this is supported
	by the minimum compiler version.  Therefore, use the